<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStaff">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/regis2" />

        <ImageView
            android:id="@+id/picImage"
            android:layout_width="174dp"
            android:layout_height="143dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            app:srcCompat="@drawable/regis1" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="415dp"
            android:layout_height="387dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/addstu1" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/addstu2" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picImage"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="271dp"
            android:layout_height="35dp"
            android:layout_marginBottom="392dp"
            android:ems="10"
            android:hint="@string/kasun_silva"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picImage"
            app:layout_constraintVertical_bias="0.604"
            android:background="@drawable/edittext_bg"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dob"
            android:textAlignment="textStart"
            android:textColor="#000000"

            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.197"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName1"
            android:layout_width="271dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:background="@drawable/edittext_bg"
            android:hint="@string/indob"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/des"
            android:textAlignment="textStart"

            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName1" />

        <Spinner
            android:id="@+id/editTextTextPersonName12"
            android:layout_height="35dp"
            android:layout_width="271dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName1"
            android:ems="10"
            android:entries="@array/drop"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.407"/>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nic"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="271dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/innic"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"

            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="271dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/inpgone"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jdate"

            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

        <EditText
            android:id="@+id/editTextTextPersonName43"
            android:layout_width="271dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/indate"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

        <Button
            android:id="@+id/Regisbtn"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/addstaff"
            android:textAllCaps="false"
            app:backgroundTint="#5D5FEF"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.419"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName43" />


</androidx.constraintlayout.widget.ConstraintLayout>