<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentAttendance">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:background="#0C46C4"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cls"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/drop"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Date"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="Search"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0C46C4"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stdname"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/present"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/absent"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="396dp"
        android:layout_height="368dp"
        android:layout_marginTop="224dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/reccadd" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="396dp"
        android:layout_height="347dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView27"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/reccc" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="393dp"
        android:layout_height="42dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/reccbotto" />

    <Button
        android:id="@+id/savestaffattend"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:backgroundTint="#5D5FEF"
        android:text="@string/Save"
        app:layout_constraintBottom_toTopOf="@+id/imageView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.847" />

    <Button
        android:id="@+id/viewattend"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:backgroundTint="#5D5FEF"
        android:text="@string/viewattend"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/imageView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savestaffattend"
        app:layout_constraintVertical_bias="0.55" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="387dp"
        android:layout_height="393dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>